force-app/main/default/objects/Diab_Timesheet_Entry__c/Diab_Timesheet_Entry__c.object-meta.xml
<CustomObject>
    <label>Timesheet Entry</label>
    <nameField>
        <label>Timesheet Entry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Timesheets Entry</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>