force-app/main/default/objects/Diab_Timesheet_Entry__c/fields/Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The person who gets approval requests upon submission of Timesheet Entry(This field was created for NPL MA).</description>
    <label>Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Timesheets_Entry_del</relationshipName>
    <type>Lookup</type>
</CustomField>