force-app/main/default/objects/Diab_Timesheet_Entry__c/fields/Area_Serv_Terr__c.field-meta.xml
<CustomField>
    <fullName>Area_Serv_Terr__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Personnel Area (Service Territory)(This field was created for NPL MA).</description>
    <label>Area (Serv. Terr)</label>
    <referenceTo>ServiceTerritory</referenceTo>
    <relationshipLabel>Timesheets Entry</relationshipLabel>
    <relationshipName>Timesheets_Entry</relationshipName>
    <type>Lookup</type>
</CustomField>