force-app/main/default/objects/Diab_Timesheet_Entry__c/fields/AttendanceType__c.field-meta.xml
<CustomField>
    <fullName>AttendanceType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Attendance Type(This field was created for NPL MA).</description>
    <label>Attendance Type</label>
    <referenceTo>AttendanceType__c</referenceTo>
    <relationshipLabel>Timesheets Entry</relationshipLabel>
    <relationshipName>Timesheets_Entry</relationshipName>
    <type>Lookup</type>
</CustomField>