force-app/main/default/objects/Diab_Timesheet_Entry__c/fields/AttendanceTypeCode__c.field-meta.xml
<CustomField>
    <fullName>AttendanceTypeCode__c</fullName>
    <description>This field use in the LWC cmp to find out type of the time entry.</description>
    <formula>AttendanceType__r.AttendenceTypeCode__c</formula>
    <label>AttendanceTypeCode</label>
    <type>Text</type>
</CustomField>