force-app/main/default/objects/Diab_Timesheet_Entry__c/fields/CatsHours__c.field-meta.xml
<CustomField>
    <fullName>CatsHours__c</fullName>
    <description>Cats Hours(This field was created for NPL MA).</description>
    <label>Cats Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>