force-app/main/default/objects/Diab_Timesheet_Entry__c/fields/CenturiOutboundNotification__c.field-meta.xml
<CustomField>
    <fullName>CenturiOutboundNotification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Timesheet entry which is sent to Outbound Notification table used by Mule(This field was created for NPL MA).</description>
    <label>Centuri Outbound Notification</label>
    <referenceTo>Centuri_Outbound_Notification__c</referenceTo>
    <relationshipLabel>Timesheets Entry</relationshipLabel>
    <relationshipName>Timesheets_Entry</relationshipName>
    <type>Lookup</type>
</CustomField>