force-app/main/default/objects/Diab_Timesheet_Entry__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>City (Not in Use Currently)</description>
    <label>City</label>
    <length>64</length>
    <type>Text</type>
</CustomField>