force-app/main/default/objects/Diab_Timesheet_Entry__c/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Class code(This field was created for NPL MA).</description>
    <label>Class</label>
    <referenceTo>Class__c</referenceTo>
    <relationshipLabel>Timesheets Entry</relationshipLabel>
    <relationshipName>Timesheets_Entry</relationshipName>
    <type>Lookup</type>
</CustomField>