force-app/main/default/objects/Diab_Timesheet_Entry__c/fields/CostCenter__c.field-meta.xml
<CustomField>
    <fullName>CostCenter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The cost center(This field was created for NPL MA).</description>
    <label>Cost Center</label>
    <referenceTo>Cost_Center__c</referenceTo>
    <relationshipLabel>Timesheets Entry</relationshipLabel>
    <relationshipName>Timesheets_Entry</relationshipName>
    <type>Lookup</type>
</CustomField>