force-app/main/default/objects/Diab_Timesheet_Entry__c/fields/Craft__c.field-meta.xml
<CustomField>
    <fullName>Craft__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Craft code(This field was created for NPL MA).</description>
    <label>Craft</label>
    <referenceTo>Craft__c</referenceTo>
    <relationshipLabel>Timesheets Entry</relationshipLabel>
    <relationshipName>Timesheets_Entry</relationshipName>
    <type>Lookup</type>
</CustomField>