force-app/main/default/objects/Diab_Timesheet_Entry__c/fields/CurrencyKey__c.field-meta.xml
<CustomField>
    <fullName>CurrencyKey__c</fullName>
    <description>The currency (we do not use this)</description>
    <formula>IF(AND(OR(Rate__c  = 0,ISBLANK( Rate__c )),OR( ValuationBasis__c = 0,ISBLANK( ValuationBasis__c ))),&apos;&apos;,&apos;USD&apos;)</formula>
    <label>Currency Key</label>
    <type>Text</type>
</CustomField>