force-app/main/default/objects/Diab_Timesheet_Entry__c/fields/Diab_IsLocked_Adjuster_Approver__c.field-meta.xml
<CustomField>
    <fullName>Diab_IsLocked_Adjuster_Approver__c</fullName>
    <description>The flag represents that Timesheet Entry is locked for edit by Adjuster and Approver(This field was created for NPL MA).</description>
    <formula>IF(DATETIMEVALUE(Default_LockoutDateTime__c) &lt; DATETIMEVALUE(NOW()), true, false
		)</formula>
    <label>IsLocked - Adjuster&amp;Approver</label>
    <type>Checkbox</type>
</CustomField>