force-app/main/default/objects/Diab_Timesheet_Entry__c/fields/Diab_IsLocked_Foreman_Floater__c.field-meta.xml
<CustomField>
    <fullName>Diab_IsLocked_Foreman_Floater__c</fullName>
    <description>The flag represents that Timesheet Entry is locked for edit by Foreman and floater(This field was created for NPL MA).</description>
    <formula>IF(Timesheet__r.WeekEnding_Date__c &lt; DATEVALUE(NOW()), true, false )</formula>
    <label>IsLocked - Foreman&amp;Floater</label>
    <type>Checkbox</type>
</CustomField>