force-app/main/default/objects/Diab_Timesheet_Entry__c/fields/ExternalRefId__c.field-meta.xml
<CustomField>
    <fullName>ExternalRefId__c</fullName>
    <description>The Unique  ID used by Integration(This field was created for NPL MA).</description>
    <externalId>true</externalId>
    <label>ExternalRefId</label>
    <length>64</length>
    <type>Text</type>
</CustomField>