force-app/main/default/objects/Diab_Timesheet_Entry__c/fields/GMT_Offset__c.field-meta.xml
<CustomField>
    <fullName>GMT_Offset__c</fullName>
    <description>This field is being used in the default lockout time to default it to Tuesday 9:00 AM AZ time.(This field was created for NPL MA).</description>
    <formula>Timesheet__r.Employee__r.Service_Resource__r.Diab_Offset__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GMT Offset</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>