force-app/main/default/objects/Diab_Timesheet_Entry__c/fields/HourPer__c.field-meta.xml
<CustomField>
    <fullName>HourPer__c</fullName>
    <description>The hours for attendance types(This field was created for NPL MA).</description>
    <label>Hour Per</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>