force-app/main/default/objects/Diab_Timesheet_Entry__c/fields/IsApprovalRequestCreated__c.field-meta.xml
<CustomField>
    <fullName>IsApprovalRequestCreated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>(This field was created for NPL MA).</description>
    <label>IsApprovalRequestCreated?</label>
    <type>Checkbox</type>
</CustomField>