force-app/main/default/objects/Diab_Timesheet_Entry__c/fields/IsApproverAvailable__c.field-meta.xml
<CustomField>
    <fullName>IsApproverAvailable__c</fullName>
    <description>The flag checks if the approver is available for the time entry(This field was created for NPL MA).</description>
    <formula>!ISBLANK( Approver__r.Id )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsApproverAvailable?</label>
    <type>Checkbox</type>
</CustomField>