force-app/main/default/objects/Diab_Timesheet_Entry__c/fields/IsCheckBox__c.field-meta.xml
<CustomField>
    <fullName>IsCheckBox__c</fullName>
    <defaultValue>false</defaultValue>
    <description>(This field was created for NPL MA).</description>
    <label>IsCheckBox</label>
    <type>Checkbox</type>
</CustomField>