force-app/main/default/objects/Diab_Timesheet_Entry__c/fields/IsOvertime__c.field-meta.xml
<CustomField>
    <fullName>IsOvertime__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if Over time is entered(This field was created for NPL MA).</description>
    <label>IsOvertime</label>
    <type>Checkbox</type>
</CustomField>