force-app/main/default/objects/Diab_Timesheet_Entry__c/fields/ISStraightTime__c.field-meta.xml
<CustomField>
    <fullName>ISStraightTime__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if Straight time is entered(This field was created for NPL MA).</description>
    <label>ISStraightTime</label>
    <type>Checkbox</type>
</CustomField>