force-app/main/default/objects/Diab_Timesheet_Entry__c/fields/LocalDateTime_del__c.field-meta.xml
<CustomField>
    <fullName>LocalDateTime_del__c</fullName>
    <description>Calculates the Employee&apos;s Local Time using the GMT offset value(This field was created for NPL MA).</description>
    <formula>DATETIMEVALUE(
DATEVALUE
(
CASE(
MOD(DATEVALUE(CreatedDate) - DATE(1900, 1, 7), 7),
0, CreatedDate +9,
1, CreatedDate +8,
2, CreatedDate +7,
3, CreatedDate +6,
4, CreatedDate +5, 
5, CreatedDate +4,
6, CreatedDate +3,
CreatedDate 
				) ))+ ( (9+ IF(!ISBLANK(PersonnelNumber__r.Service_Resource__r.Diab_Offset__c), PersonnelNumber__r.Service_Resource__r.Diab_Offset__c, 0) )/24)</formula>
    <label>Local Date/Time</label>
    <type>DateTime</type>
</CustomField>