force-app/main/default/objects/Diab_Timesheet_Entry__c/fields/PersonnelNumber__c.field-meta.xml
<CustomField>
    <fullName>PersonnelNumber__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Diab Comment - The employee’s employee ID(This field was created for NPL MA). 
The name of the employee associated with the timesheet entry</description>
    <label>Employee Name</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Timesheets Entry</relationshipLabel>
    <relationshipName>Timesheets_Entry</relationshipName>
    <type>Lookup</type>
</CustomField>