force-app/main/default/objects/Diab_Timesheet_Entry__c/fields/Rate__c.field-meta.xml
<CustomField>
    <fullName>Rate__c</fullName>
    <description>The rate for attendance types(This field was created for NPL MA).</description>
    <label>Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>