force-app/main/default/objects/Diab_Timesheet_Entry__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <description>Reason - Not Using</description>
    <label>Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>