force-app/main/default/objects/Diab_Timesheet_Entry__c/fields/ShortText__c.field-meta.xml
<CustomField>
    <fullName>ShortText__c</fullName>
    <description>Short text info  – Not using</description>
    <label>Short Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>