force-app/main/default/objects/Diab_Timesheet_Entry__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>The state – Not using</description>
    <label>State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>