force-app/main/default/objects/Diab_Timesheet_Entry__c/fields/Timesheet__c.field-meta.xml
<CustomField>
    <fullName>Timesheet__c</fullName>
    <description>Timesheet Parent Object(This field was created for NPL MA).</description>
    <label>Timesheet</label>
    <referenceTo>Diab_Timesheet__c</referenceTo>
    <relationshipLabel>Timesheets Entry</relationshipLabel>
    <relationshipName>Timesheets_Entry</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>