force-app/main/default/objects/Diab_Timesheet_Entry__c/fields/Union__c.field-meta.xml
<CustomField>
    <fullName>Union__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Union code(This field was created for NPL MA).</description>
    <label>Union</label>
    <referenceTo>Union__c</referenceTo>
    <relationshipLabel>Timesheets Entry</relationshipLabel>
    <relationshipName>Timesheets_Entry</relationshipName>
    <type>Lookup</type>
</CustomField>