force-app/main/default/objects/Diab_Timesheet_Entry__c/fields/ValuationBasis__c.field-meta.xml
<CustomField>
    <fullName>ValuationBasis__c</fullName>
    <description>The rate if it is a wage type(This field was created for NPL MA).</description>
    <label>Valuation Basis</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>