force-app/main/default/objects/Diab_Timesheet_Entry__c/fields/WageType__c.field-meta.xml
<CustomField>
    <fullName>WageType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Wage Type(This field was created for NPL MA).</description>
    <label>Wage Type</label>
    <referenceTo>WageType__c</referenceTo>
    <relationshipLabel>Timesheets Entry</relationshipLabel>
    <relationshipName>Timesheets_Entry</relationshipName>
    <type>Lookup</type>
</CustomField>