force-app/main/default/objects/Diab_Timesheet_Entry__c/fields/WBSCode__c.field-meta.xml
<CustomField>
    <fullName>WBSCode__c</fullName>
    <description>The WBS Number from WBS Element(This field was created for NPL MA).</description>
    <formula>WBSElement__r.SAP_WBS_ElementWithCodingMask__c</formula>
    <label>WBS Code</label>
    <type>Text</type>
</CustomField>