force-app/main/default/objects/Diab_Timesheet_Entry__c/fields/WBSElement__c.field-meta.xml
<CustomField>
    <fullName>WBSElement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Work Order</description>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Timesheets Entry</relationshipLabel>
    <relationshipName>Timesheets_Entry</relationshipName>
    <type>Lookup</type>
</CustomField>