force-app/main/default/objects/Diab_Timesheet_Entry__c/fields/WBSElementID__c.field-meta.xml
<CustomField>
    <fullName>WBSElementID__c</fullName>
    <description>The WBS Element</description>
    <formula>WBSElement__r.SAP_WBS_ElementWithCodingMask__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WBSElementID</label>
    <type>Text</type>
</CustomField>