force-app/main/default/objects/Diab_Timesheet_Entry__c/fields/WeekEnding_Date__c.field-meta.xml
<CustomField>
    <fullName>WeekEnding_Date__c</fullName>
    <description>Week Ending date is set to the upcoming Sunday of the current week.(This field was created for NPL MA).</description>
    <formula>Timesheet__r.WeekEnding_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WeekEnding Date</label>
    <type>Date</type>
</CustomField>