force-app/main/default/objects/Diab_Timesheet_Entry__c/fields/WorkDate__c.field-meta.xml
<CustomField>
    <fullName>WorkDate__c</fullName>
    <description>The Work Date(This field was created for NPL MA).</description>
    <label>Work Date</label>
    <type>Date</type>
</CustomField>