force-app/main/default/objects/Diab_Timesheet_Entry__c/validationRules/Abort_Approval_of_Zero_Records.validationRule-meta.xml
<ValidationRule>
    <fullName>Abort_Approval_of_Zero_Records</fullName>
    <active>false</active>
    <description>Abort Approval of Zero Records</description>
    <errorConditionFormula>AND
(
ISPICKVAL( Status__c , &apos;Approved&apos;), 
AND( 
    OR( ISBLANK(CatsHours__c ), CatsHours__c = 0),  
    OR( ISBLANK(HourPer__c ),HourPer__c = 0),  
    OR( ISBLANK(Rate__c),Rate__c= 0),  
    OR( ISBLANK(ValuationBasis__c ),ValuationBasis__c = 0)
  )  
)</errorConditionFormula>
    <errorMessage>Zero Time Entry are not allowed to approve.</errorMessage>
</ValidationRule>