force-app/main/default/objects/Diab_Timesheet_Entry__c/validationRules/Abort_Submission_Process_if_no_Approver.validationRule-meta.xml
<ValidationRule>
    <fullName>Abort_Submission_Process_if_no_Approver</fullName>
    <active>false</active>
    <description>No authorization to Approve the Time sheet Entry.</description>
    <errorConditionFormula>AND(ISBLANK( Approver__r.Id   ) ,  ISPICKVAL(Status__c, &apos;Submitted&apos;)   )</errorConditionFormula>
    <errorMessage>No authorization to Approve the Time sheet Entry.</errorMessage>
</ValidationRule>