force-app/main/default/objects/Diab_Timesheet_Entry__c/validationRules/Checck_Personnel_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>Checck_Personnel_Number</fullName>
    <active>true</active>
    <description>Personnel Number is required.</description>
    <errorConditionFormula>ISBLANK(PersonnelNumber__c )</errorConditionFormula>
    <errorMessage>Make sure Personnel Number is entered.</errorMessage>
</ValidationRule>