force-app/main/default/objects/Diab_Timesheet_Entry__c/validationRules/Checck_Work_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Checck_Work_Date</fullName>
    <active>false</active>
    <description>Work Date is Required</description>
    <errorConditionFormula>ISBLANK( WorkDate__c  )</errorConditionFormula>
    <errorMessage>Make sure Work Date is entered.</errorMessage>
</ValidationRule>