force-app/main/default/objects/Diab_Timesheet_Entry__c/validationRules/Check_Attendance_And_Wage_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Attendance_And_Wage_Type</fullName>
    <active>true</active>
    <description>Timesheet Entry should have either Attendance or Wage Type</description>
    <errorConditionFormula>NOT(OR (AND (!ISBLANK( AttendanceType__c), ISBLANK(WageType__c  )),
					AND (ISBLANK( AttendanceType__c), !ISBLANK(WageType__c  ))))</errorConditionFormula>
    <errorMessage>Timesheet Entry should have either Attendance or Wage Type</errorMessage>
</ValidationRule>