force-app/main/default/objects/Diab_Timesheet_Entry__c/validationRules/Check_Union_Info.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Union_Info</fullName>
    <active>false</active>
    <description>If Personnel Number is Union, Union Info is required.</description>
    <errorConditionFormula>IF(!PersonnelNumber__r.IsNotUnion__c, 
				ISBLANK(Union__c),
				false)</errorConditionFormula>
    <errorMessage>Personnel Number is Union. Union Info is required.</errorMessage>
</ValidationRule>