force-app/main/default/objects/Diab_Timesheet_Entry__c/validationRules/Test_TobeDeleted_Abort_save_changes.validationRule-meta.xml
<ValidationRule>
    <fullName>Test_TobeDeleted_Abort_save_changes</fullName>
    <active>false</active>
    <description>Test Rule</description>
    <errorConditionFormula>true</errorConditionFormula>
    <errorMessage>Testing System error - will be disabled in sometime</errorMessage>
</ValidationRule>