force-app/main/default/objects/Diab_Timesheet_Entry__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>WBSElement__c</columns>
    <columns>PersonnelNumber__c</columns>
    <columns>Approver__c</columns>
    <columns>WorkDate__c</columns>
    <columns>CostCenter__c</columns>
    <columns>AttendanceType__c</columns>
    <columns>WageType__c</columns>
    <columns>HourPer__c</columns>
    <columns>Status__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>WeekEnding_Date__c</columns>
    <columns>Default_LockoutDateTime__c</columns>
    <columns>Diab_IsLocked_Adjuster_Approver__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>